@@ -1,7 +1,16 @@
-/*                                                                                                                                                                                             
-<dtml-with base_properties>                                                                                                                                                                    
-<dtml-call "REQUEST.set('portal_url', portal_url())">                                                                                                                                          
- */    
+/*
+<dtml-with base_properties>
+<dtml-call "REQUEST.set('portal_url', portal_url())">
+ */
+
+.eea-refwidget-popup {
+  box-shadow: 0px 0px 100px #000;
+  broder-radius: 0;
+}
+
+.eea-refwidget-popup .ui-dialog-buttonpane {
+  padding: 0;
+}
 
 .eea-refwidget-popup .popup-tabs {
   width: 80%;
@@ -10,7 +19,10 @@
 }
 
 .eea-refwidget-popup .ui-dialog-titlebar {
-  background: #cde2a7 url(&dtml-portal_url;/title-bar-background.png) repeat-x scroll 50% 50%;
+  background: #fff;
+  font-size: 16px;
+  border: none;
+  border-bottom: 1px solid #ccc;
 }
 
 .eea-refwidget-popup  .popup-tabs ul.ui-widget-header {
@@ -30,10 +42,16 @@
 }
 
 .eea-refwidget-popup  .popup-selected-items .ui-state-default {
-  padding: 0.2em;
-  font-weight: bold;
+  padding: 0.5em;
+  font-weight: normal;
   margin: 0px;
-  font-size: 85%;
+  font-size: 14px;
+  background-color: #777c1f;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#b1c748), to(#777c1f));
+  background-image: -webkit-linear-gradient(center top , #b1c748, #777c1f);
+  background-image:    -moz-linear-gradient(center top , #b1c748, #777c1f);
+  background-image:     -ms-linear-gradient(center top , #b1c748, #777c1f);
+  background-image:      -o-linear-gradient(center top , #b1c748, #777c1f);
 }
 
 .eea-ref-selecteditems {
@@ -159,6 +177,7 @@
     text-decoration: none;
     border: none;
     margin: 0 ;
+    font-size: 14px;
 }
 
 .popup-tabs li.formTab a.current {
@@ -199,6 +218,6 @@
   display: none;
 }
 
-/*                                                                                                                                                                                             
-</dtml-with>  (end of loaded base_properties variables)                                                                                                                                        
- */ 
+/*
+</dtml-with>  (end of loaded base_properties variables)
+ */
